# ScramblerApp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/scramblerapp/: __init__.py  main.py  scrambler.py
src/scramblerapp/dircrawler/: crawler.py  filemodder.py
src/scramblerapp/utils/: base.py  commoncmd.py  encryption.py
src/scramblerapp/workflow/: workflow.py
