[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "ScramblerApp"
version = "0.4.0"
authors = [
    { name = "ArcticTechnology", email = "arctic.technology.mail@gmail.com" },
]
description = "Encrypt messages, files, and data."
keywords = [
    "cryptography",
    "encryption",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.11"

dependencies = [
    "cmd2>=4,<5",
    "platformdirs>=4,<5",
    "tqdm>=4,<5"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ArcticTechnology/ScramblerApp"

[project.scripts]
scramblerapp = "scramblerapp.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false
